feat: 🚀 add local and jwt authentication

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ DB_PASSWORD=password
 DB_DATABASE=toolkit
 DB_HOST="localhost:5432"
 
+JWT_SECRET=abcdef
+JWT_AUDIENCE=toolkit.localhost
+JWT_ISSUER=toolkit.localhost
+JWT_EXPIRES_IN=24h
+
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_DATABASE}?schema=public"
