--- a/package.json
+++ b/package.json
@@ -1,94 +1,32 @@
 {
-  "name": "toolkit-backend",
+  "name": "home-toolkit",
   "version": "0.0.1",
-  "description": "A NestJS backend.",
+  "description": "A toolkit to use for your home",
   "private": true,
+  "license": "MIT",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.1.7",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.1.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "^3.9.2",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "build": "yarn workspaces foreach run build",
+    "dev": "yarn workspaces foreach run dev",
+    "start": "yarn workspaces foreach run start",
+    "test": "yarn workspaces foreach run test",
+    "docker:up": "yarn workspaces foreach run docker:up",
+    "docker:down": "yarn workspaces foreach run docker:down",
+    "postinstall": "husky install"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.0.2",
-    "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
     "commitlint": "^16.1.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "git-cz": "^4.8.0",
-    "husky": "^7.0.4",
-    "jest": "^27.2.5",
-    "lint-staged": "^12.3.3",
-    "prettier": "^2.3.2",
-    "prisma": "^3.9.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "husky": "^8.0.0",
+    "lint-staged": "^12.3.3"
   },
   "config": {
     "commitizen": {
       "path": "git-cz"
     }
-  }
+  },
+  "packageManager": "yarn@3.2.2"
 }
