--- a/packages/api/.gitignore
+++ b/packages/api/.gitignore
@@ -1,13 +1,22 @@
-tsconfig.build.tsbuildinfo
-
+# compiled output
+/dist
 /node_modules
-.env
-.env.*
-!.env.example
 
-/.yarn
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
 # OS
 .DS_Store
+
+# Tests
+/coverage
+/.nyc_output
 
 # IDEs and editors
 /.idea
@@ -24,3 +33,7 @@ tsconfig.build.tsbuildinfo
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.env
+.env.*
+!.env.example
