--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,22 +21,24 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@anatine/zod-nestjs": "^1.7.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.7",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.0.5",
     "@prisma/client": "^3.9.2",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "omit-deep-lodash": "^1.1.7",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -45,7 +47,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.0.0",
+    "@types/omit-deep-lodash": "^1.1.1",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
@@ -73,6 +77,10 @@
       "ts"
     ],
     "rootDir": "src",
+    "moduleNameMapper": {
+      "~/(.*)": "<rootDir>/$1",
+      "^prisma/(.*)": "<rootDir>/../prisma/$1"
+    },
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
