--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,12 +32,14 @@
     "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
     "omit-deep-lodash": "^1.1.7",
+    "openapi3-ts": "^2.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
+    "ts-deepmerge": "^2.0.5",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -68,7 +70,8 @@
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0"
   },
   "jest": {
     "moduleFileExtensions": [
