--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
-    "dev": "nest start --watch",
+    "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "dev:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -30,7 +30,8 @@
     "@nestjs/platform-express": "^9.0.9",
     "@nestjs/swagger": "^6.0.5",
     "@prisma/client": "^4.2.1",
-    "bcrypt": "^5.0.1",
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "omit-deep-lodash": "^1.1.7",
     "openapi3-ts": "^2.0.1",
     "passport": "^0.6.0",
@@ -56,22 +57,28 @@
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.5",
+    "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
+    "run-script-webpack-plugin": "^0.1.1",
     "source-map-support": "^0.5.21",
+    "start-server-nestjs-webpack-plugin": "^2.2.5",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "5.9.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-pnp-externals": "^1.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
