--- a/packages/web/.prettierrc
+++ b/packages/web/.prettierrc
@@ -1,7 +1,10 @@
 {
-	"trailingComma": "es5",
-	"tabWidth": 2,
-	"semi": true,
-	"singleQuote": true,
-	"printWidth": 120
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "printWidth": 120,
+  "plugins": ["prettier-plugin-svelte"],
+  "svelteSortOrder": "options-styles-scripts-markup",
+  "svelteIndentScriptAndStyle": true
 }
