--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,7 +30,11 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltestack/svelte-query": "^1.6.0",
     "@svelteuidev/composables": "^0.7.0",
-    "@svelteuidev/core": "^0.7.0"
+    "@svelteuidev/core": "^0.7.0",
+    "axios": "^0.27.2",
+    "broadcast-channel": "^4.14.0",
+    "jwt-decode": "^3.1.2"
   }
 }
