--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,6 +35,7 @@
     "@svelteuidev/core": "^0.7.0",
     "axios": "^0.27.2",
     "broadcast-channel": "^4.14.0",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "svelte-notifications": "^0.9.96"
   }
 }
