--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^6.0.5",
     "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
+    "node-tradfri-client": "^3.1.1",
     "omit-deep-lodash": "^1.1.7",
     "openapi3-ts": "^2.0.1",
     "passport": "^0.6.0",
