--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,7 +28,9 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.9",
+    "@nestjs/platform-socket.io": "^9.0.9",
     "@nestjs/swagger": "^6.0.5",
+    "@nestjs/websockets": "^9.0.9",
     "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
     "node-tradfri-client": "^3.1.1",
