--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.27.2",
     "broadcast-channel": "^4.14.0",
     "jwt-decode": "^3.1.2",
+    "socket.io-client": "^4.5.1",
     "svelte-feather-icons": "^4.0.0",
     "svelte-notifications": "^0.9.96"
   }
