--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.9",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.9",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.9",
@@ -57,6 +58,7 @@
     "@types/omit-deep-lodash": "^1.1.1",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
