--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,14 +17,19 @@
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.18.1",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.6",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.0"
@@ -32,8 +37,6 @@
   "type": "module",
   "dependencies": {
     "@sveltestack/svelte-query": "^1.6.0",
-    "@svelteuidev/composables": "^0.7.0",
-    "@svelteuidev/core": "^0.7.0",
     "broadcast-channel": "^4.14.0",
     "jwt-decode": "^3.1.2",
     "ky": "^0.31.1",
