--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -42,6 +42,7 @@
     "ky": "^0.31.1",
     "socket.io-client": "^4.5.1",
     "svelte-feather-icons": "^4.0.0",
-    "svelte-notifications": "^0.9.96"
+    "svelte-notifications": "^0.9.96",
+    "theme-change": "^2.2.0"
   }
 }
