--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,8 +13,8 @@
   },
   "devDependencies": {
     "@home-toolkit/types": "workspace:^",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "1.0.0-next.66",
+    "@sveltejs/kit": "1.0.0-next.444",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
