--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,6 +34,7 @@
     "@nestjs/websockets": "^9.0.9",
     "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
+    "config": "^3.3.7",
     "node-tradfri-client": "^3.1.1",
     "omit-deep-lodash": "^1.1.7",
     "openapi3-ts": "^2.0.1",
@@ -52,6 +53,7 @@
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.9",
     "@types/bcrypt": "^5.0.0",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/lodash": "^4.14.182",
