--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@anatine/zod-nestjs": "^1.7.3",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.9",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.9",
