--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
     "@home-toolkit/types": "workspace:^",
     "@sveltejs/adapter-auto": "1.0.0-next.66",
     "@sveltejs/kit": "1.0.0-next.444",
+    "@types/humanize-duration": "^3.27.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
@@ -38,6 +39,7 @@
   "dependencies": {
     "@sveltestack/svelte-query": "^1.6.0",
     "broadcast-channel": "^4.14.0",
+    "humanize-duration": "^3.27.3",
     "jwt-decode": "^3.1.2",
     "ky": "^0.31.1",
     "socket.io-client": "^4.5.1",
