--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,4 @@
-# enableMessageNames: false
-
+yarnPath: .yarn/releases/yarn-3.2.2.cjs
 nodeLinker: node-modules
 
 plugins:
@@ -7,5 +6,5 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
-
-yarnPath: .yarn/releases/yarn-3.2.2.cjs
+  - path: .yarn/plugins/@ojkelly/plugin-all.cjs
+    spec: "https://yarn.build/latest"
