--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "start": "node build/index.js",
     "package": "svelte-kit package",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@home-toolkit/types": "workspace:^",
     "@sveltejs/adapter-auto": "1.0.0-next.66",
+    "@sveltejs/adapter-node": "^1.0.0-next.88",
     "@sveltejs/kit": "1.0.0-next.444",
     "@types/humanize-duration": "^3.27.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
